--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" href="{% static '/css/tailwindoutput.css' %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    {% csrf_token %}
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
